Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • G GLib
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 857
    • Issues 857
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 56
    • Merge requests 56
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • GLib
  • Issues
  • #1104
Closed
Open
Issue created Nov 17, 2015 by Bugzilla@bugzilla-migration💬Reporter

GAppInfo.set_as_last_used_for_type() implementation missing on win32

Submitted by Bakhtiar Hasmanan

Link to original bug (#758248)

Description

Test case: gtk3-demo > pickers > Mail > Other Application > Choose any > Select Above will segfault.

Under GDB unfortunately can't trace the last crashing function:

(gdb) bt
#0  0x00000000 in ?? ()
#1  0x6d781c56 in g_app_info_set_as_last_used_for_type (appinfo=0x58db640,
    content_type=0x4aef060 "x-scheme-handler/mailto", error=0x0) at gappinfo.c:336
#2  0x6669b209 in add_or_find_application () from e:\rtvc100-32\bin\libgtk-3-0.dll
#3  0x6669b241 in gtk_app_chooser_dialog_response () from e:\rtvc100-32\bin\libgtk-3-0.dll
#4  0x63c493f1 in g_cclosure_marshal_VOID__INT (closure=0x4adc028, return_value=0x0,
    n_param_values=2, param_values=0x28e700, invocation_hint=0x28e668, marshal_data=0x0)
    at gmarshal.c:1162
#5  0x63c46829 in g_closure_invoke (closure=0x4adc028, return_value=0x0, n_param_values=2,
    param_values=0x28e700, invocation_hint=0x28e668) at gclosure.c:801
#6  0x63c5de22 in signal_emit_unlocked_R (node=0x4877160, detail=0, instance=0x4a93230,
    emission_return=0x0, instance_and_params=0x28e700) at gsignal.c:3627
#7  0x63c5d556 in g_signal_emit_valist (instance=0x4a93230, signal_id=326, detail=0,
    var_args=0x28e90c "\001") at gsignal.c:3383
#8  0x63c5d844 in g_signal_emit (instance=0x4a93230, signal_id=326, detail=0) at gsignal.c:3439
#9  0x66737d7f in gtk_dialog_response () from e:\rtvc100-32\bin\libgtk-3-0.dll
#10 0x66736634 in action_widget_activated () from e:\rtvc100-32\bin\libgtk-3-0.dll
#11 0x63c48fe6 in g_cclosure_marshal_VOID__VOIDv (closure=0x4addc18, return_value=0x0,
    instance=0x4a4fc98, args=0x28ebf8 "", marshal_data=0x0, n_params=0, param_types=0x0)
    at gmarshal.c:905
#12 0x63c46a67 in _g_closure_invoke_va (closure=0x4addc18, return_value=0x0, instance=0x4a4fc98,
    args=0x28ebf8 "", n_params=0, param_types=0x0) at gclosure.c:864
#13 0x63c5ce89 in g_signal_emit_valist (instance=0x4a4fc98, signal_id=178, detail=0,
    var_args=0x28ebf8 "") at gsignal.c:3292
#14 0x63c5d844 in g_signal_emit (instance=0x4a4fc98, signal_id=178, detail=0) at gsignal.c:3439
#15 0x666bdad4 in gtk_button_clicked () from e:\rtvc100-32\bin\libgtk-3-0.dll
#16 0x666be6f3 in gtk_button_do_release () from e:\rtvc100-32\bin\libgtk-3-0.dll
#17 0x666be9bc in gtk_real_button_released () from e:\rtvc100-32\bin\libgtk-3-0.dll
#18 0x63c48fe6 in g_cclosure_marshal_VOID__VOIDv (closure=0x86d2e8, return_value=0x0,
    instance=0x4a4fc98, args=0x28ef48 "\004", marshal_data=0x666be96c, n_params=0, param_types=0x0)
    at gmarshal.c:905
#19 0x63c46e22 in g_type_class_meta_marshalv (closure=0x86d2e8, return_value=0x0, instance=0x4a4fc98,
    args=0x28ef48 "\004", marshal_data=0x1fc, n_params=0, param_types=0x0) at gclosure.c:1021
#20 0x63c46a67 in _g_closure_invoke_va (closure=0x86d2e8, return_value=0x0, instance=0x4a4fc98,
    args=0x28ef48 "\004", n_params=0, param_types=0x0) at gclosure.c:864
#20 0x63c46a67 in _g_closure_invoke_va (closure=0x86d2e8, return_value=0x0, instance=0x4a4fc98,
    args=0x28ef48 "\004", n_params=0, param_types=0x0) at gclosure.c:864
#21 0x63c5ce89 in g_signal_emit_valist (instance=0x4a4fc98, signal_id=177, detail=0,
    var_args=0x28ef48 "\004") at gsignal.c:3292
#22 0x63c5d844 in g_signal_emit (instance=0x4a4fc98, signal_id=177, detail=0) at gsignal.c:3439
#23 0x666bbecf in multipress_released_cb () from e:\rtvc100-32\bin\libgtk-3-0.dll
#24 0x6b947498 in ffi_call_win32 () at ../src/x86/win32.S:589
#25 0x6b946b2e in ffi_call () from e:\rtvc100-32\bin\libffi-6.dll
#26 0x63c47f84 in _fu19__ffi_type_pointer () at gclosure.c:1600
#27 0x63c46a67 in _g_closure_invoke_va (closure=0x4addff8, return_value=0x0, instance=0x4a96430,
    args=0x28f3cc "\001", n_params=3, param_types=0x440e0c0) at gclosure.c:864
#28 0x63c5ce89 in g_signal_emit_valist (instance=0x4a96430, signal_id=239, detail=0,
    var_args=0x28f3cc "\001") at gsignal.c:3292
#29 0x63c5d844 in g_signal_emit (instance=0x4a96430, signal_id=239, detail=0) at gsignal.c:3439
#30 0x6678e944 in gtk_gesture_multi_press_end () from e:\rtvc100-32\bin\libgtk-3-0.dll
#31 0x63c4a056 in g_cclosure_marshal_VOID__BOXEDv (closure=0x440d9f8, return_value=0x0,
    instance=0x4a96430, args=0x28f6fc "", marshal_data=0x6678e8c6, n_params=1, param_types=0x440df08)
    at gmarshal.c:1950
#32 0x63c46e22 in g_type_class_meta_marshalv (closure=0x440d9f8, return_value=0x0,
    instance=0x4a96430, args=0x28f6fc "", marshal_data=0x84, n_params=1, param_types=0x440df08)
    at gclosure.c:1021
#33 0x63c46a67 in _g_closure_invoke_va (closure=0x440d9f8, return_value=0x0, instance=0x4a96430,
    args=0x28f6fc "", n_params=1, param_types=0x440df08) at gclosure.c:864
#34 0x63c5ce89 in g_signal_emit_valist (instance=0x4a96430, signal_id=234, detail=0,
    var_args=0x28f6fc "") at gsignal.c:3292
#35 0x63c5d844 in g_signal_emit (instance=0x4a96430, signal_id=234, detail=0) at gsignal.c:3439
#36 0x6678a9a3 in _gtk_gesture_set_recognized () from e:\rtvc100-32\bin\libgtk-3-0.dll
#37 0x6678aa93 in _gtk_gesture_check_recognized () from e:\rtvc100-32\bin\libgtk-3-0.dll
#38 0x6678b538 in gtk_gesture_handle_event () from e:\rtvc100-32\bin\libgtk-3-0.dll
#39 0x66790317 in gtk_gesture_single_handle_event () from e:\rtvc100-32\bin\libgtk-3-0.dll
#40 0x667547fd in gtk_event_controller_handle_event () from e:\rtvc100-32\bin\libgtk-3-0.dll
#41 0x66968830 in _gtk_widget_run_controllers () from e:\rtvc100-32\bin\libgtk-3-0.dll
#42 0x669682b7 in gtk_widget_real_button_event () from e:\rtvc100-32\bin\libgtk-3-0.dll
#43 0x667e6cd6 in _gtk_marshal_BOOLEAN__BOXEDv () from e:\rtvc100-32\bin\libgtk-3-0.dll
#44 0x63c46e22 in g_type_class_meta_marshalv (closure=0x86c4d0, return_value=0x28fa28,
    instance=0x4a4fc98, args=0x28fb5c "\020<c\004tû(", marshal_data=0xc4, n_params=1,
    param_types=0x86c388) at gclosure.c:1021
#45 0x63c46a67 in _g_closure_invoke_va (closure=0x86c4d0, return_value=0x28fa28, instance=0x4a4fc98,
    args=0x28fb5c "\020<c\004tû(", n_params=1, param_types=0x86c388) at gclosure.c:864
#46 0x63c5ce89 in g_signal_emit_valist (instance=0x4a4fc98, signal_id=72, detail=0,
    var_args=0x28fb5c "\020<c\004tû(") at gsignal.c:3292
#47 0x63c5d844 in g_signal_emit (instance=0x4a4fc98, signal_id=72, detail=0) at gsignal.c:3439
#48 0x669691c1 in gtk_widget_event_internal () from e:\rtvc100-32\bin\libgtk-3-0.dll
#49 0x669686f2 in gtk_widget_event () from e:\rtvc100-32\bin\libgtk-3-0.dll
#50 0x667e5782 in propagate_event_up () from e:\rtvc100-32\bin\libgtk-3-0.dll
#51 0x667e5a0c in propagate_event () from e:\rtvc100-32\bin\libgtk-3-0.dll
#52 0x667e5acf in gtk_propagate_event () from e:\rtvc100-32\bin\libgtk-3-0.dll
#53 0x667e4943 in gtk_main_do_event () from e:\rtvc100-32\bin\libgtk-3-0.dll
#54 0x710cc968 in _gdk_event_emit () from e:\rtvc100-32\bin\libgdk-3-0.dll
#55 0x710ffc0f in gdk_event_dispatch () from e:\rtvc100-32\bin\libgdk-3-0.dll
#56 0x687f9e67 in g_main_dispatch (context=0x83c130) at gmain.c:3154
#57 0x687fab02 in g_main_context_dispatch (context=0x83c130) at gmain.c:3769
#58 0x687facdd in g_main_context_iterate (context=0x83c130, block=1, dispatch=1, self=0x7942a0)
    at gmain.c:3840
#59 0x687fad90 in g_main_context_iteration (context=0x83c130, may_block=1) at gmain.c:3901
#60 0x6d80ccd7 in g_application_run (application=0x79a090, argc=1, argv=0x7a1fb0)
    at gapplication.c:2338
#61 0x00420dac in main ()

I try GLib 2.45.2 (before registry file association commits) and it works but for slightly older GTKs since GTK 3.18 need Glib 2.46. Anyhow all older GTK will crashed with Glib 2.45.3 or newer.

OS: WIndows 8.1 64bit

Version: 2.46.x

Edited Sep 05, 2018 by Philip Withnall
Assignee
Assign to
Time tracking